@@ -1,5 +1,6 @@
 desktop-entry-editor (1.4.6) stable; urgency=medium
 
   * Support debian package build
+  * Support linglong package build
 
- -- zty199 <zty2864@gmail.com>  Fri, 23 Mar 2024 00:12:00 +0800
+ -- zty199 <zty2864@gmail.com>  Fri, 23 Mar 2024 03:04:00 +0800
